# message-flow-rabbitmq

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-to-pypi.yml
src/message_flow_rabbitmq/: __init__.py  __main__.py  amqp_data.py  consumer.py  handler.py  producer.py  subscription.py
src/message_flow_rabbitmq/consumer/: __init__.py  _consumer_construction.py  amqp_data.py  consumer.py  handler.py  subscription.py
src/message_flow_rabbitmq/consumer/dead_letters/: __init__.py  dead_letters.py  dead_letters_config.py
src/message_flow_rabbitmq/dead_letters/: __init__.py  dead_letters.py  i_dead_letters.py
src/message_flow_rabbitmq/producer/: __init__.py  _producer_construction.py  producer.py
src/message_flow_rabbitmq/retry_manager/: __init__.py  i_retry_manager.py  reconnecting_error.py  retry_config.py  retry_manager.py
