[project]
name = "message-flow-rabbitmq"
version = "0.2.2"
description = "RabbitMQ messaging for the Message Flow"
authors = [
    {name = "Valentin Vorobyev", email = "voro6yov.valentin@gmail.com"},
]
dependencies = [
    "pika>=1.3.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache License 2.0"}

[project.optional-dependencies]
local-run = [
    "click>=8.1.7",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
package-type = "library"

[tool.pdm.dev-dependencies]
linting = [
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "codespell>=2.2.6",
    "pyright>=1.1.349",
]

testing = [
    "pytest>=8.0.2",
    "pytest-mock>=3.12.0",
    "pytest-pretty>=1.2.0",
    "pytest-examples>=0.0.10",
    "coverage>=7.4.3",
]

[tool.ruff]
line-length = 120
lint.extend-select = ['Q', 'RUF100', 'C90', 'UP', 'I', 'T']
lint.extend-ignore = ['D105', 'D107', 'D205', 'D415']
lint.flake8-quotes = {inline-quotes = 'double', multiline-quotes = 'double'}
lint.mccabe = { max-complexity = 14 }
lint.isort = { known-first-party = ['message_flow_rabbitmq', 'tests'] }
target-version = "py37"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ['T', 'E721', 'F811']

[tool.ruff.format]
quote-style = 'double'

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
'*/__init__.py' = ['F405', 'F403', 'D']
'tests/*' = ['D']

[tool.pyright]
include = ['message_flow_rabbitmq']
exclude = ['**/__init__.py']

[tool.codespell]
skip = '.git'
